// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Switch[Base] should render correctly  1`] = `
<button
  class="c-odvwdl soui-switch-wrapper"
  role="switch"
  type="button"
>
  <input
    style="display: none;"
    tabindex="0"
    type="checkbox"
  />
  <div
    class="c-5x7bcd soui-switch-indicator"
  />
  <div
    class="c-z1akeb soui-switch-content"
  >
    <div
      class="c-e29grc soui-switch-text-padding"
    />
  </div>
</button>
`;

exports[`Switch[Base] should render correctly about loading 1`] = `
<div
  style="display: flex; flex-direction: row; gap: 24px; align-items: center;"
>
  <button
    class="c-odvwdl soui-switch-wrapper cpe22c0 soui-switch-wrapper-checked c-f66dcd soui-switch-wrapper-disabled"
    role="switch"
    type="button"
  >
    <input
      checked=""
      disabled=""
      style="display: none;"
      tabindex="0"
      type="checkbox"
    />
    <div
      class="c-5x7bcd soui-switch-indicator"
    >
      <div
        class="cptqh34 soui-switch-loading"
      />
    </div>
    <div
      class="c-z1akeb soui-switch-content"
    >
      <div
        class="c-e29grc soui-switch-text-padding"
      />
    </div>
  </button>
  <button
    class="c-odvwdl soui-switch-wrapper c-f66dcd soui-switch-wrapper-disabled"
    role="switch"
    type="button"
  >
    <input
      disabled=""
      style="display: none;"
      tabindex="0"
      type="checkbox"
    />
    <div
      class="c-5x7bcd soui-switch-indicator"
    >
      <div
        class="cptqh34 soui-switch-loading"
      />
    </div>
    <div
      class="c-z1akeb soui-switch-content"
    >
      <div
        class="c-e29grc soui-switch-text-padding"
      />
    </div>
  </button>
</div>
`;

exports[`Switch[Base] should render correctly about size 1`] = `
<div
  style="display: flex; flex-direction: row; gap: 24px; align-items: center;"
>
  <button
    class="c-odvwdl soui-switch-wrapper cap0q9c soui-switch-wrapper-small"
    role="switch"
    type="button"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="checkbox"
    />
    <div
      class="c-5x7bcd soui-switch-indicator"
    />
    <div
      class="c-z1akeb soui-switch-content"
    >
      <div
        class="c-e29grc soui-switch-text-padding"
      />
    </div>
  </button>
  <button
    class="c-odvwdl soui-switch-wrapper"
    role="switch"
    type="button"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="checkbox"
    />
    <div
      class="c-5x7bcd soui-switch-indicator"
    />
    <div
      class="c-z1akeb soui-switch-content"
    >
      <div
        class="c-e29grc soui-switch-text-padding"
      />
    </div>
  </button>
  <button
    class="c-odvwdl soui-switch-wrapper cakyuqs soui-switch-wrapper-large"
    role="switch"
    type="button"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="checkbox"
    />
    <div
      class="c-5x7bcd soui-switch-indicator"
    />
    <div
      class="c-z1akeb soui-switch-content"
    >
      <div
        class="c-e29grc soui-switch-text-padding"
      />
    </div>
  </button>
</div>
`;

exports[`Switch[Base] should render correctly about status 1`] = `
<div
  style="display: flex; flex-direction: row; gap: 24px;"
>
  <button
    class="c-odvwdl soui-switch-wrapper cpe22c0 soui-switch-wrapper-checked c-f66dcd soui-switch-wrapper-disabled"
    role="switch"
    type="button"
  >
    <input
      checked=""
      disabled=""
      style="display: none;"
      tabindex="0"
      type="checkbox"
    />
    <div
      class="c-5x7bcd soui-switch-indicator"
    />
    <div
      class="c-z1akeb soui-switch-content"
    >
      <div
        class="c-e29grc soui-switch-text-padding"
      />
    </div>
  </button>
  <button
    class="c-odvwdl soui-switch-wrapper c-f66dcd soui-switch-wrapper-disabled"
    role="switch"
    type="button"
  >
    <input
      disabled=""
      style="display: none;"
      tabindex="0"
      type="checkbox"
    />
    <div
      class="c-5x7bcd soui-switch-indicator"
    />
    <div
      class="c-z1akeb soui-switch-content"
    >
      <div
        class="c-e29grc soui-switch-text-padding"
      />
    </div>
  </button>
</div>
`;
